Finalize user pages

--- a/resources/css/products.css
+++ b/resources/css/products.css
@@ -516,6 +516,7 @@
     font-size: 0.875rem;
     font-weight: 600;
     margin-bottom: 1.5rem;
+    width: fit-content;
 }
 
 .product-description {
